# textual-autocomplete

./: .gitignore  LICENSE  README.md  flake.nix  package.nix  pyproject.toml
.github/workflows/: ci.yml
examples/: _cursor_tracking.py  _headers.py  advanced.py  basic.css  basic.py  basic_single_column.py  basic_two_column.py  basic_two_column_heavy_styles.py  custom_meta.css  custom_meta.py  dynamic_data.py  example01.py  example_textarea.py  headers.json  left_column_styling.py  partial_completions.py  path_completions_absolute.py  quadrant.css  quadrant.py  styling.css  styling.py  version2.py
examples/textual2/: advanced.py  basic.py  basic_two_column.py
tests/snapshots/: test_cursor_tracking.py  test_function_candidates.py  test_input.py  test_prevent_default.py  test_styling.py
textual_autocomplete/: __init__.py  _autocomplete.py  _autocomplete2.py  _path_autocomplete.py  fuzzy_search.py  matcher.py
