[project]
name = "textual-autocomplete"
version = "4.0.0a0"
description = "Easily add autocomplete dropdowns to your Textual apps."
authors = [
    { name = "Darren Burns", email = "darrenb900@gmail.com" }
]
readme = "README.md"
packages = [{ include = "textual_autocomplete" }]
dependencies = [
    "textual>=2.0.0",
    "typing-extensions>=4.5.0"
]
requires-python = ">=3.8.1"

[tool.uv]
dev-dependencies = [
    "mypy",
    "textual-dev"
]

[tool.hatch.build.targets.wheel]
packages = ["textual_autocomplete"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"