[project]
name = "textual-autocomplete"
version = "4.0.0"
description = "Easily add autocomplete dropdowns to your Textual apps."
authors = [
    { name = "Darren Burns", email = "darrenb900@gmail.com" }
]
readme = "README.md"
packages = [{ include = "textual_autocomplete" }]
dependencies = [
    "textual>=2.0.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.9.0"

[tool.uv]
dev-dependencies = [
    "mypy",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest-xdist>=3.6.1",
    "textual-dev",
]

[tool.hatch.build.targets.wheel]
packages = ["textual_autocomplete"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
